assets/css/screen.css
/*
  Site: KISSmetrics Support
  Author: Derek P. Collins, dcollins@kissmetrics.com
  Time: 2010-09-14 15:48:20
*/

/* RESET: =reset
------------------------------------------------------------*/
html, body, div, h1, h2, h3, h4, h5, h6, ul, ol, dl, li, dt, dd, p, blockquote, pre, form, fieldset, table, th, td { margin: 0; padding: 0; }

/* GENERAL: =general
------------------------------------------------------------*/
body {
  background: #4c4c4c url(../images/background.png) 0 0 repeat;
  font-family: "Helvetica Neue", "Helvetica", "Arial", "Tahoma", "Geneva", sans-serif;
}

#wrapper {
  background: #fff;
  margin: 0 auto;
  overflow: hidden;
  width: 960px
}
.col {
  border-left: 1px solid #eee;
  float: left;
  margin-left: -1px;
  padding: 30px;
  position: relative;
  width: 620px; /*680-60*/
}
.col.side {
  border: none;
  border-right: 1px solid #eee;
  padding: 20px;
  width: 219px; /*280-60-1*/
}

hr {
  border: none;
  border-top: 1px solid #eee;
  padding: 10px 0;
}
img {
  max-width: 100%;
  padding: 1px;
  border: 1px solid #ddd;
}

/* TOP: =top
------------------------------------------------------------*/
#top {
  background-color: #323232;
  margin-bottom: 35px;
}
#header {
  margin: 0 auto;
  height: 60px;
  width: 960px;
}
#header h1 {
  float: left;
  margin-right: 10px;
  padding: 18px 0;
  text-indent: -9999px;
}
#header h1 a {
  background: url(../images/km_logo.png) 0 0 no-repeat;
  background-size: 198px 26px;
  display: block;
  float: left;
  height: 26px;
  width: 198px;
}
#header .links {
  float: right;
}
#header .links a {
  color: #9ecee1;
  font-size: 13px;
  font-weight: bold;
  line-height: 22px;
  margin: 20px 5px 0 10px;
  text-decoration: none;
  text-shadow: #000 1px 1px 1px;
}
#header a.km:hover {
  text-decoration: underline;
}

/* CRUMBS: =crumbs
------------------------------------------------------------*/
#crumbs {
  background: #e1eff3;
  box-shadow: 0 -1px 2px rgba(0,0,0,.1) inset;
  -webkit-box-shadow: 0 -1px 2px rgba(0,0,0,.1) inset;
  -moz-box-shadow: 0 -1px 2px rgba(0,0,0,.1) inset;
  list-style: none;
  overflow: hidden;
  padding: 15px 20px 0px 20px;
}
#crumbs .leftcrumb{
  padding: 0px 20px 0px 0px;
  width: 220px; /*260-20-20*/
  display: inline-block;
  float: left;
}
#crumbs .rightcrumb{
  /*padding: 4px 0px 5px 20px;*/
  display: inline-block;
  float: left;
}
#crumbs li {
  color: #a1a1a1;
  //float: left;
  font-weight: bold;
  line-height: normal;
}
#crumbs li a {
  color: #0c8cc4;
  text-decoration: none;
}
#crumbs li a:hover {
  text-decoration: underline;
}
.breadcrumb {
  background-color: inherit !important;
}

/* SWIFTYPE: =search_form
------------------------------------------------------------*/
#search_form {
  padding: 20px 0px 0px 0px;
}
body form input.st-search-input {
  height: 30px;
}

/* CONTENT: =content
------------------------------------------------------------*/
.col h1 {
  color: #454545;
  font-size: 30px;
  font-weight: normal;
  margin-bottom: 20px;
}
.col h1.intro_title {
  margin-bottom: 4px;
}
.col h2 {
  color: #000;
  font-size: 22px;
  margin-bottom: 12px;
}
.col h3 {
  color: #292929;
  font-size: 18px;
  margin-bottom: 12px;
}
.col h4 {
  color: #292929;
  font-size: 16px;
  margin-bottom: 12px;
}
.col p {
  color: #656565;
  font-size: 14px;
  line-height: 26px;
  margin-bottom: 20px;
}
.col p.categories {
  margin-bottom: 0;
}
.col ul,
.col ol {
  color: #000;
  margin-left: 20px;
  margin-bottom: 20px;
}
.col li {
  color: #656565;
  font-size: 14px;

  margin-bottom: 4px;
  line-height: 25px;
}
.col p a,
.col li a,
.col td a {
  color: #0c8cc4;
  text-decoration: underline;
}

.col p a:hover {
  text-decoration: none;
}
.col code {
  color: #555;
  font: 'Courier', monospace;
  width: 571px;
  margin: 0 2px;
  padding: 0px 5px;
  border: 1px solid #eaeaea;
  background-color: #f8f8f8;
  border-radius: 3px;
}
.col pre {
  background: #eef8ff;
  border-left: 4px solid #bee6ff;
  line-height: 20px;
  margin-bottom: 20px;
  padding: 12px 15px;

  white-space: pre-wrap;       /* css-3 */
  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
  white-space: -pre-wrap;      /* Opera 4-6 */
  white-space: -o-pre-wrap;    /* Opera 7 */
  word-wrap: break-word;       /* Internet Explorer 5.5+ */
}

.col pre code {
  border: none;
  background: none;
  color: #3c7aac;
  margin: 0 0px;
  padding: 0px 0px;
}

.col a code {
  color: #388da6;
  text-decoration: underline;
}

.col h1 code,
.col h2 code,
.col h3 code,
.col h4 code {
  color: #000;
  font: 'Courier', monospace;
}

.col .content {
  display: inline-block;
}

table {
  border-collapse: collapse;
  margin-bottom: 20px;
  width: 100%;
}
table th {
  background-color: #eee;
  border: 1px solid #e5e5e5;
  color: #454545;
  font-size: 14px;
  padding: 10px;
  text-align: left;
}

table th a {
	color: #454545;
	text-decoration: underline;
}
table td {
  border: 1px solid #e5e5e5;
  color: #656565;
  font-size: 14px;
  line-height: 18px;
  padding: 10px;
}

blockquote {
  border-left: 4px solid #e5e5e5;
  margin: 0 0 20px 15px;
  padding: 2px 0 0 8px;
}

.side ul {
  list-style: none;
  margin: 0;
}
.side ul li {
  border-top: 1px solid #eee;
  display: block;
  font-size: 14px;
  font-weight: bold;
  margin: 15px 0px 0 0px;
  padding: 15px 0px 0 0px;
  line-height: 20px;
}
.side ul li a {
  color: #6a6a6a;
  text-decoration: none;
}
.side ul li a:hover {
  color: #343434;
}
.side ul ul {
  margin-top: 10px;
}
.side ul ul li {
  border: none;
  color: #909191;
  font-size: 13px;
  font-weight: normal;
  line-height: 20px;
  margin: 0 0 4px 0;
  padding: 0;
}
.side ul ul li a {
  color: #0c8cc4;
  font-size: 13px;
  font-weight: normal;
  line-height: 20px;
  margin: 0;
  padding: 0;
  text-decoration: none;
}
.side ul ul li a:hover {
  text-decoration: underline;
}

.side .collapse-hitbox:hover {
  cursor: pointer;
  text-decoration: underline;
}
/* ... */

